[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/level/torch_flame.gd" type="Script" id=1]
[ext_resource path="res://assets/images/circle-white-4x4.png" type="Texture" id=2]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.00192678, 0.441233, 0.601156, 0.807322 )
colors = PoolColorArray( 0.890196, 0.890196, 0.890196, 0, 0.890196, 0.890196, 0.890196, 0, 0.890196, 0.890196, 0.890196, 0.141176, 0.890196, 0.890196, 0.890196, 0.141176, 0.890196, 0.890196, 0.890196, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 72.5351, 0, 0, Vector2( 0.998236, 27.9279 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.236487 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 0.11
emission_shape = 1
emission_sphere_radius = 2.29
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 106.99
angular_velocity = 178.19
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping_curve = SubResource( 9 )
angle = 720.0
angle_random = 1.0
scale = 10.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 7 )

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 9.91838e-39, 0.312139, 0.789981, 1 )
colors = PoolColorArray( 1, 0.95, 0, 0.584314, 1, 0.376471, 0, 0.501961, 1, 0.329412, 0, 0.054902, 0.384314, 0, 0, 0.00392157 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, -1.76333, 0, 0, Vector2( 1, 0.0833334 ), -0.553202, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.11
emission_shape = 1
emission_sphere_radius = 4.85
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 9.48
gravity = Vector3( 0, 0, 0 )
initial_velocity = 106.99
angular_velocity = 178.19
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 78.53
angle = 720.0
angle_random = 1.0
scale = 4.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.369942, 0.537572, 0.668593 )
colors = PoolColorArray( 1, 1, 0.960784, 1, 1, 0.996078, 0.890196, 1, 1, 0.973333, 0.2, 0.564706, 1, 0.952941, 0.0196078, 0 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 13 )

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0, 1 ), 0.0, -2.16056, 0, 0, Vector2( 1, 0.141892 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
lifetime_randomness = 0.07
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 5.86
gravity = Vector3( 0, 0, 0 )
initial_velocity = 70.11
angular_velocity = 178.19
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 65.55
angle = 720.0
angle_random = 1.0
scale = 2.8
scale_curve = SubResource( 16 )
color_ramp = SubResource( 14 )

[node name="TorchFlame" type="Node2D"]
script = ExtResource( 1 )

[node name="Smoke" type="Particles2D" parent="."]
amount = 80
lifetime = 4.0
preprocess = 4.0
randomness = 0.12
process_material = SubResource( 12 )
texture = ExtResource( 2 )

[node name="OuterFlame" type="Particles2D" parent="."]
amount = 80
lifetime = 1.5
preprocess = 1.5
randomness = 0.12
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="InnerFlame" type="Particles2D" parent="."]
lifetime = 0.6
preprocess = 0.8
randomness = 0.05
process_material = SubResource( 17 )
texture = ExtResource( 2 )
